--- a/app/views/resources/new.html.erb
+++ b/app/views/resources/new.html.erb
@@ -1,17 +1,28 @@
-<h1>New resource</h1>
+<h1>New image</h1>
 
 <%= form_for :resource ,url: "/resources/", :html => { :multipart => true } do |f| %>
-<p>
+
+
+<div class="control-group">
+
      <b> Picture </b><br/>
+	<div class="controls">
      <%= f.file_field :pic %>
-</p>
-<p>
-	<%= f.label :tags, "Tags (separated by commas)" %><br />
-	<%= f.text_field :tag_list %>
-</p>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+     </div>
+
+</div>
+<div class="control-group">
+      <%= f.label :tags, "Tags (separated by commas)", :class => 'control-label'  %>
+      <div class="controls">
+        <%= f.text_field :tag_list, :class => 'text_field' %>
+      </div>
+    </div>
+
+
+<div class="form-actions">
+      <%= f.submit nil, :class => 'btn btn-primary'  %>
+      <%= link_to 'Cancel', resources_path, :class => 'btn' %>
+    </div>
+  
 <% end %>
 
-<%= link_to 'Back', resources_path %>
