--- a/app/views/resources/new.html.erb
+++ b/app/views/resources/new.html.erb
@@ -1,4 +1,3 @@
-
 <head>
 <style> h1
 {
@@ -8,7 +7,9 @@ body{
 font-family: Georgia, "Abecedario",Times, serif;
 color: sienna;
 }
-</style> </head>
+</style> 
+</head>
+
 <h1>New image</h1>
 
 <%= form_for :resource ,url: "/resources/", :html => { :multipart => true } do |f| %>
