--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -20,15 +20,19 @@ p.ex2
 </style>
 <div align="right"> <%= link_to "Upload new image", new_resource_path %> </div>
 </head>
+<% if @resources.empty? %>
+	<h1>No images</h1>
+<% else %>
+	<h1>Images</h1>
 
-<h1>Images</h1>
+	<h4> Tags </h4>
 
-<h4> Tags </h4>
-<% @resources.each do |resource| %> 
-	 <%= raw resource.tags.map(&:name).map { |t| link_to t, tag_path(t) }.join(', ') %>
-<% end %>
+	<% @resources.each do |resource| %> 
+		 <%= raw resource.tags.map(&:name).map { |t| link_to t, tag_path(t) }.join(', ') %>
+	<% end %>
+	
 </br></br></br></br></br>
-
+<% end %>
 <div id="gallery" data-toggle="modal-gallery" data-target="#modal-gallery">
   <% @resources.each do |resource| %>
     <%= link_to image_tag(resource.pic.url(:medium)), resource %> 
