--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -25,7 +25,7 @@ p.ex2
 <% else %>
 	<h1>Images</h1>
 
-	<h4> Tags </h4>
+	<h4> Tags : </h4>
 
 	<% @resources.each do |resource| %> 
 		 <%= raw resource.tags.map(&:name).map { |t| link_to t, tag_path(t) }.join(', ') %>
@@ -33,6 +33,7 @@ p.ex2
 	
 </br></br></br></br></br>
 <% end %>
+
 <div id="gallery" data-toggle="modal-gallery" data-target="#modal-gallery">
   <% @resources.each do |resource| %>
     <%= link_to image_tag(resource.pic.url(:medium)), resource %> 
