--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <title>GallerySample</title>
+  <title>Gallery</title>
   
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
@@ -12,6 +12,7 @@
 <body>
 
 <%= yield %>
+<p class="navbar-text pull-right">
 
 
 <div class="navbar navbar-fixed-top">
