--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -1,6 +1,6 @@
 
 <html>
-<div align="right">  <%= link_to 'Back', resources_path %> | <%= link_to 'Delete', resource_path(@resource), method: :delete, data: { confirm: 'Are you sure?' } %>
+<div align="right">  <%= link_to 'Back', resources_path %> 
 </div>
 
 <p id="notice"><%= notice %></p>
